--- a/backend/.env
+++ b/backend/.env
@@ -5,11 +5,8 @@ TEST_TOKEN=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjEiLCJlbWFpbCI6ImRhbmll
 
 
 # Tu frontend Vite:
-CORS_ORIGIN=http://localhost:5175
+CORS_ORIGIN=http://localhost:5173
 
-SUPABASE_URL=https://qeneolghygjceclpbhao.supabase.co
-SUPABASE_ANON_KEY=sb_publishable_oA9FgvqVYj7e7MukuJQgMw_1CM1XV3W
-SUPABASE_SERVICE_ROLE_KEY=service-role-key-here
-JWT_SECRET="JWT_D4n!el-Ju@n-S3b@st!an-Ixch3l_9fA""
+JWT_SECRET=JWT_D4n!el-Ju@n-S3b@st!an-Ixch3l_9fA
 DATABASE_URL="postgresql://postgres.qeneolghygjceclpbhao:DulcesGratis4@aws-0-us-west-2.pooler.supabase.com:6543/postgres?pgbouncer=true"
 
