--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,3 +1,8 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
+  "routes": [
+    { "handle": "filesystem" },
+    { "src": "/landing", "dest": "/landing/index.html" },
+    { "src": "/landing/(.*)", "dest": "/landing/$1" },
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
 }
